# CV

./: .gitignore  README.md  main.py
FEM/: FEM.pro  cryptoalgo.cpp  cryptoalgo.h  filemanager.cpp  filemanager.h  main.cpp  main.qml  qml.qrc
FEM/UI/: DropArea.qml
Graphs/: CMakeLists.txt  main.cpp
Graphs/Graphs/: CMakeLists.txt  Graphs.cpp  Graphs.h
MSL/: CMakeLists.txt
MSL/MSL/: CMakeLists.txt  MSL.cpp  MSL.h
MSL/MSL/geometry/include/: geometry.hpp
MSL/MSL/geometry/src/: geometry.cpp
MSL/MSL/math/include/: math.hpp
MSL/MSL/math/src/: math.cpp
SEEMSLIGET/: SEEMSLIGET.pro  main.cpp  main.qml  maindesign.js  qml.qrc
SEEMSLIGET/elements/: Button.qml  FileMenu.qml  ListOfNode.qml  TextEditor.qml  main.qml  texteditor.qml
SEEMSLIGET/scripts/: autotest.js  main.js  maindesign.js
SMV/: SMV.pro  qml.qrc  smv.cpp  smv.qml
SMV/content/: Banner.qml  Button.qml  CheckBox.qml  StockChart.qml  StockInfo.qml  StockListDelegate.qml  StockListModel.qml  StockListView.qml  StockModel.qml  StockSettingsPanel.qml  StockView.qml
SMV/include/: stocklist.h
SMV/scripts/: draw.js
SMV/src/: stocklist.cpp
bot/: bot.py
cv/cv/: settings.py
h8_chat/: main.py
h8_chat/bot/: bot.py
h8_chat/model/: model.py
h8_chat/system/: config_parser.py
pigihouse/: pigihouse.pro
src/: main.py
src/ui/: main_window.py
src/ui/widgets/: button.py
system/: config_parser.py
